# django-user-notification

./: .gitignore  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  README.md  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  poetry-publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example/: .env.example  db.sqlite3  pyproject.toml
example/example/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
example/myapp/: consumers.py
notification/: admin.py  app_settings.py  apps.py  base.py  consumers.py  models.py  urls.py  utils.py
notification/backends/: __init__.py  aliyunsms.py  base.py  dingchatbot.py  dingtodotask.py  dingworkmessage.py  dummy.py  email.py  websocket.py
notification/migrations/: 0001_initial.py  0002_auto_20220808_0736.py  0003_auto_20220810_1710.py  0004_auto_20220812_0705.py  0005_alter_message_id_alter_messagetemplate_id_and_more.py
tests/: settings.py  test_dummy.py
