[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["aiden <aiden_lu@wochacha.com>"]

[[tool.poetry.source]]
name = "aliyun-pypi"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.12"
django-user-notification = {path = "../", develop = true, extras = ["channels", "aliyunsms"]}
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
